Refactor functions with fs-tp and update Form API spec
