# backend/guides/openapi/demo-x.yaml
@@ -448,8 +448,29 @@ components:
         status:
           type: string
           description: status of a form
+        approver:
+          type: string
+          description: the ID of who approve this form
+        approveDate:
+          type: string
+          format: date-time
+          description: approve time of this form
+          example: "2021-06-08T07:17:40.541Z"
+        comment:
+          type: string
+          description: comment of this form
+        createdAt:
+          type: string
+          format: date-time
+          description: create time of this form
+          example: "2021-06-08T07:17:40.541Z"
+        updatedAt:
+          type: string
+          format: date-time
+          description: update time of this form
+          example: "2021-06-08T07:17:40.541Z"
       required:
-        - _id
+        - _id, apiId, subscriberId, submitUser, status
     # Schema for error response body
     Error:
       type: object
