# backend/src/models/form.ts
@@ -1,4 +1,5 @@
 import mongoose from 'mongoose';
+import { IForm } from '../types/form';
 
 const Schema = mongoose.Schema;
 
@@ -6,7 +7,12 @@ const formSchema = new Schema({
     apiId: { type: String, required: true },
     subscriberId: { type: String, required: true },
     submitUser: { type: String, required: true },
-    status: { type: String, required: true }
+    status: { type: String, required: true },
+    approver: { type: String },
+    approveDate: { type: Date },
+    comment: { type: String }
+}, {
+    timestamps: true
 });
 
-export default mongoose.model('Form', formSchema);
+export default mongoose.model<IForm>('Form', formSchema);
